tests/rustdoc-ui/doctest/private-item-doc-test.stderr
error: documentation test in private item
  --> $DIR/private-item-doc-test.rs:4:5
   |
LL | /     /// private doc test
LL | |     ///
LL | |     /// ```
LL | |     /// assert!(false);
LL | |     /// ```
   | |___________^
   |
note: the lint level is defined here
  --> $DIR/private-item-doc-test.rs:1:9
   |
LL | #![deny(rustdoc::private_doc_tests)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

